Add params and body to api generation

--- a/custom-template/libraries/ktor/api.mustache
+++ b/custom-template/libraries/ktor/api.mustache
@@ -46,6 +46,12 @@ fun Route.{{classname}}(api: {{classname}}) {
      * Returns: {{#responses}}{{^isDefault}}{{#isArray}}List<{{/isArray}}{{{dataType}}}{{#isArray}}>{{/isArray}}{{/isDefault}}{{/responses}}
      */
     {{#lambda.lowercase}}{{httpMethod}}{{/lambda.lowercase}}("{{path}}") {
+     {{#queryParams}}
+            // val {{paramName}} = call.request.queryParameters["{{paramName}}"]
+            {{/queryParams}}
+            {{#bodyParam}}
+            // val requestBody = call.receive<{{dataType}}>()
+            {{/bodyParam}}
         api.{{operationId}}(call) // Implementation will handle `call.respond`
     }
 
